--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -93,3 +93,4 @@ nav:
      - api/transform/accessors.md
      - api/transform/measures.md
      - api/transform/depth.md
+     - api/transform/screen.md
