--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,6 +2,10 @@
 #   griffe dump gsp -o/dev/null -LDEBUG
 #   mkdocs -v
 # See also https://github.com/mkdocstrings/mkdocstrings/issues/451
+#
+# To build (with bash script execution):
+#   export MARKDOWN_EXEC_AUTO=bash; mkdocs build
+
 site_name: Graphic Server Protocol 
 use_directory_urls: false
 repo_url: https://github.com/vispy/gsp
