--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -99,3 +99,4 @@ nav:
      - api/transform/depth.md
      - api/transform/screen.md
      - api/transform/colormap.md
+     - api/transform/faces.md
