Added point visuals with examples and documentation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -88,7 +88,8 @@ nav:
  - Overview:
    - index.md
  - Gallery:
-   - gallery-zero.md
+   - gallery/canvas-viewport.md
+   - gallery/pixels-points-markers.md
  - Implementations:
    - Python:
      - python/command.md
