--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
   "numpy",
   "matplotlib",
   "pyyaml",
+  "pytest",
   "mkdocs",
   "mkdocs-material",
   "mkdocstrings[python]",
